Ported The Application To NeutralinoJs

--- a/package.json
+++ b/package.json
@@ -1,56 +1,22 @@
 {
-  "name": "taskapp",
-  "productName": "taskapp",
-  "version": "1.0.0",
-  "description": "My Electron application description",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
-  },
-  "keywords": [],
-  "author": "aditya",
-  "license": "MIT",
-  "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "taskapp"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ]
-    }
-  },
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.0",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.61",
-    "@electron-forge/maker-deb": "^6.0.0-beta.61",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.61",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
-    "@electron-forge/maker-zip": "^6.0.0-beta.61",
-    "electron": "15.0.0"
-  }
+	"name": "taskapp",
+	"version": "1.0.0",
+	"description": "A Simple Task App made in Neutralino Js",
+	"main": "src/index.js",
+	"scripts": {
+		"dev": "concurrently -k --raw npm:esb-dev npm:neu-dev",
+		"build": "npm run esb-build && npm run neu-build",
+		"esb-build": "node ./esbuild.js --prod",
+		"neu-build": "neu build",
+		"esb-dev": "node ./esbuild.js",
+		"neu-dev": "neu run",
+		"clean": "rimraf ./www/build"
+	},
+	"keywords": [],
+	"author": "Aditya Mishra",
+	"license": "MIT",
+	"devDependencies": {
+		"concurrently": "^7.0.0",
+		"esbuild": "^0.14.25"
+	}
 }
